Version 1.1:

(2012-03-26)
 * Possibility to select the player (smplayer or mplayer, more can be added
   in the future).

(2012-03-25)
 * Add Portuguese translation.

(2012-03-22)
 * Use its own directory for the config file.

(2012-03-18)
 * Add the Basque translation.

(2012-03-12)
 * Fix a crash that may happen if using some of the Ubuntu themes 
   (Ambiance and Radiance at least).

(2012-03-08)
 * Possibility to build a portable version.


Version 1.0:

(2012-02-24)
 * First version.
