@@ -1,5 +1,8 @@
 Version 1.1:
 
+(2012-03-27)
+ * Now it's possible to use VLC, Dragon Player and Totem as player.
+
 (2012-03-26)
  * Possibility to select the player (smplayer or mplayer, more can be added
    in the future).
